# CellPainting-Claw

./: .dockerignore  .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
configs/: project_config.deepprofiler_validation.json  project_config.demo.json  project_config.example.json  project_config.portable.example.json
demo/: README.md
docs/: api_reference.md  conf.py  config_contract.md  cppipe_customization_design.md  faq.md  first_run_guide.md  index.md  install.md  introduction.md  library_design.md  nanobot_mcp_preparation.md  public_api_contract.md  public_api_output_contract.md  publishing_guide.md  python_api_help.md  readthedocs_guide.md  release_quickstart.md  release_readiness_checklist.md  requirements.txt  testing.md  usage_guide.md
docs/api/: cli.md  index.md  public_entrypoints.md  skills.md
docs/cli/: index.md
docs/demo/: index.ipynb  index.md
docs/get_started/: index.md
docs/installation/: index.md
docs/introduction/: index.md
docs/openclaw/: index.md  segmentation_demo.md
docs/quick_start/: index.ipynb  index.md
docs/release/: index.md
docs/skills/: build_deepprofiler_project.md  collect_deepprofiler_features.md  cp_build_single_cell_table.md  cp_extract_measurements.md  cp_extract_segmentation_artifacts.md  cp_generate_segmentation_previews.md  cp_prepare_segmentation_inputs.md  crop_export_single_cell_crops.md  cyto_aggregate_profiles.md  cyto_annotate_profiles.md  cyto_normalize_profiles.md  cyto_select_profile_features.md  cyto_summarize_classical_profiles.md  data_download.md  data_inspect_availability.md  data_plan_download.md  download_cellpainting_data.md  download_data.md  dp_build_deep_feature_project.md  dp_collect_deep_features.md  dp_export_deep_feature_inputs.md  dp_run_deep_feature_model.md  dp_summarize_deep_features.md  export_deepprofiler_inputs.md  export_single_cell_crops.md  (+18 more)
environment/: cellpainting-claw.environment.yml  lyx_env_reference.yml
release/: README.md
scripts/: build_release_bundle.sh  run_release_smoke_test.sh
tests/: test_config_contract_smoke.py  test_data_access_smoke.py  test_deepprofiler_pipeline_smoke.py  test_deepprofiler_profile_env_smoke.py  test_delivery_smoke.py  test_mcp_server_smoke.py  test_mcp_tools_smoke.py  test_orchestration_smoke.py  test_presets_smoke.py  test_profile_summaries_smoke.py  test_public_api_dispatch_smoke.py  test_public_api_smoke.py  test_public_branding_smoke.py  test_skills_smoke.py  test_test_suites_smoke.py
(+132 files in other folders)
