[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellpaint-pipeline-lib"
version = "0.1.0"
description = "Standardized wrapper library for Cell Painting profiling, segmentation, and data-access workflows"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "OpenAI Codex" }
]
keywords = ["cell-painting", "pycytominer", "cellprofiler", "image-analysis"]
dependencies = [
  "matplotlib",
  "numpy",
  "pandas",
  "Pillow",
  "pyarrow",
  "pycytominer",
  "scikit-learn",
  "tifffile",
]

[project.optional-dependencies]
data-access = [
  "boto3",
  "botocore",
  "cpgdata>=0.6.0",
  "quilt3",
]
deepprofiler = [
  "deepprofiler==0.3.1",
  "tensorflow==2.10.1",
  "tensorflow-addons==0.20.0",
]
mcp = [
  "mcp[cli]>=1,<2",
]
test = [
  "pytest>=8",
]

[project.scripts]
cellpaint-pipeline = "cellpaint_pipeline.cli:main"
cellpaint-pipeline-tests = "cellpaint_pipeline.test_suites:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
